--- a/CUDA586/CUDA586/CUDA586.vcxproj
+++ b/CUDA586/CUDA586/CUDA586.vcxproj
@@ -56,6 +56,7 @@
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <CodeGeneration>compute_80,sm_80</CodeGeneration>
+      <AdditionalOptions>-gencode arch=compute_80,code=sm_80 %(AdditionalOptions)</AdditionalOptions>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
